# docts

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  star_notify.yml  update-version.py  update_version.py
SisulizerDemo/: Sisulizer.chm  Sisulizer.sds  Sisulizer_0~4929.xls  Sisulizer_words.xlf
SisulizerDemo/zh/: Sisulizer.chm
docs/source/: conf.py  index.rst  modules.rst
docts/: Doc.py  __init__.py
docts/filter/: F1.py  __init__.py
docts/map/: M1.py  __init__.py
docts/parser/: XLFParser.py  XLSParser.py  __init__.py
docts/writer/: XLSWriter.py
src/docts/: __init__.py  __main__.py
tests/: InstallShield.py  Main.py  parse_xls.py  test_InstallShield.py  test_WordsFilter.py  test_filter.py  test_fix_bug.py  test_map.py  test_parse_xlf.py
tests/test_files/: Sisulizer.xlf  htmlhelp.xls  vsintellicode.xlf
