[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "docts"
authors = [
    { name = "foyoux" },
]
description = "python package docts"
keywords = ["docts"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]


[project.urls]
"Source" = "https://github.com/foyoux/docts"
"Homepage" = "https://github.com/foyoux/docts"
"Bug Tracker" = "https://github.com/foyoux/docts/issues"


[project.scripts]
docts = "docts:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = { attr = "docts.__version__" }
dependencies = { file = "requirements.txt" }


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
