[metadata]
name = docts
version = attr: docts.__version__
author = foyou
author_email = yimi.0822@qq.com
description = document translate, read & translate & write
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/foyoux/docts
project_urls =
    Documentation = https://docts.readthedocs.io/zh_CN/latest/
    Source = https://github.com/foyoux/docts
    Bug Tracker = https://github.com/foyoux/docts/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 5 - Production/Stable
keywords = document translate tools
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6.*
install_requires =
    pygtrans
    xlwings
    pxy
[options.packages.find]
where = .
;exclude =
;    tests